# tsurf

./: .gitignore  .sops.yaml  .test-status  .tsurf-control-plane  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  SECURITY.md  ecosystem_research.md  flake.nix  treefmt.nix  tsurf
.claude/: .test-status
.githooks/: post-commit  pre-commit
.github/: CODEOWNERS
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1-MILESTONE-AUDIT.md
docs/: VOICE-RESEARCH.md  architecture.md  base-contract.md  extras.md  oob-recovery.md  operations.md  private-overlay.md  recovery-runbook.md  roadmap.md  secret-proxy-architecture.md
extras/: cass.nix  codex-openrouter.nix  codex.nix  cost-tracker.nix  dashboard.nix  dev-agent.nix  docker.nix  opencode.nix  pi.nix  restic.nix  syncthing.nix
home/: agent-config.nix  agentic-dev-base.nix  bash.nix  beads.nix  cass.nix  default.nix  git.nix  ssh.nix  tmux.nix
hosts/: disko-config.nix  hardware.nix
modules/: agent-compute.nix  agent-egress-proxy.nix  agent-launcher.nix  agent-sandbox.nix  agentd.nix  automaton.nix  base.nix  boot.nix  break-glass-ssh.nix  canvas.nix  cost-tracker.nix  dashboard.nix  default.nix  dev-agent.nix  dm-guide.nix  docker.nix  grafana.nix  harmonia-cache.nix  headscale.nix  home-assistant.nix  homepage.nix  impermanence.nix  matrix.nix  monitoring.nix  networking.nix  nginx.nix  nono.nix  ntfy.nix  openclaw.nix  repos.nix  restic.nix  secret-proxy.nix  secrets.nix  spacebot.nix  ssh-canary.nix  sun-schedule.nix  (+3 more)
src/neurosys-mcp/: auth.py  calendar_tools.py  gmail.py  google_auth.py  logseq.py  pyproject.toml  rest_shim.py  server.py
(+439 files in other folders)
