[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosys-mcp"
version = "0.2.0"
description = "Neurosys MCP server — Home Assistant, Matrix, Logseq, and Gmail tools"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.12.4,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "orgparse",
  "google-auth",
]

[project.scripts]
neurosys-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "auth", "logseq", "google_auth", "gmail"]
