[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosys-mcp"
version = "0.3.0"
description = "Neurosys MCP server — Home Assistant, Matrix, Gmail, and Calendar tools"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.12.4,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "google-auth",
  "requests",
]

[project.scripts]
neurosys-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "auth", "google_auth", "gmail", "calendar_tools"]
